# better-greeter

./: .gitignore  README.md  greeter.xml  meson.build  resources.xml  style.css
.github/: dependencies
.github/workflows/: CI.yml
include/: log.hh  utils.hh  widget_ptr.hh
include/greeter/: app.hh  greeter.hh  interface.hh  ipc.hh  log.hh  session.hh  settings.hh  utils.hh  window.hh
include/widgets/: profile.hh
src/: main.cc  utils.cc
src/greeter/: app.cc  greeter.cc  interface.cc  ipc.cc  session.cc  utils.cc  window.cc
src/widgets/: profile.cc
